--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^21.6.0",
+    "@react-native-firebase/auth": "^21.6.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/native": "^7.0.4",
     "@react-navigation/stack": "^7.0.6",
