--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "start:dev": "cross-env APP_ENV=development npx react-native start --reset-cache",
+    "start:prod": "cross-env APP_ENV=production npx react-native start --reset-cache",
+    "build:dev": "cd android && ./gradlew assembleDebug",
+    "build:prod": "cd android && ./gradlew assembleRelease",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
@@ -17,6 +21,7 @@
     "@react-navigation/stack": "^7.0.6",
     "react": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.3.0"
@@ -33,8 +38,10 @@
     "@react-native/metro-config": "0.76.3",
     "@react-native/typescript-config": "0.76.3",
     "@types/react": "^18.2.6",
+    "@types/react-native-dotenv": "^0.2.2",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "cross-env": "^7.0.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
